# blender-mcp

./: .gitignore  CONTRIBUTING.md  COPILOT_INTEGRATION.md  PROPER_WORKFLOW.md  README.md  TEAM_SETUP.md  add_cube_via_mcp.py  addon.py  check_blender.py  copilot-instructions.md  copilot_bridge.py  demo_nl_commands.py  enhanced_nl_interface.py  geonode_helper.py  material_helper.py  migrate_blendermcp.sh  natural_language_blender.py  pyproject.toml  scene_analyzer.py  setup-team.sh  setup.sh  setup_guide.sh  test_connection.py  test_enhanced_interface.py
addons/: README.md  __init__.py  quick_actions_panel.py
blender/: testing01.blend  testing01.blend1  testing02.blend  testing02.blend1  testing03.blend  testing03.blend1  tillageSimulation-1.4.blend
blender/addons/: gltf_pipeline_addon.py  quick_tools_panel.py
blender/project_scripts/: fix_mature_stems.py  fix_tree_base.py
docs/: BLENDER_API_LESSONS.md  DEVELOPMENT.md  LEAFBUILDER_HANDOFF.md  PLANTSYSTEM_HANDOFF.md  PLANT_GEONODES_DESIGN.md
docs/blender_manual_v500_en.html/: 404.html  copyright.html  genindex.html  (+3 more)
examples/: __init__.py  add_cube_client.py  demo_nl_commands.py  enhanced_nl_interface.py
scripts/: analyze_mature_stems.py  analyze_tillage_scene.py  check_instances.py  direct_scene_analysis.py  get_scene_info.py
tests/: __init__.py  check_blender.py  test_connection.py  test_enhanced_interface.py  test_mcp_connection.py
tools/: __init__.py  blender_socket.py  copilot_bridge.py  geonode_helper.py  material_helper.py  node_addon_helper.py  scene_analyzer.py  texture_baker.py  texture_baker_v2.py
(+4266 files in other folders)
